# microfuse

./: .gitignore  .gitmodules  Makefile  README.rst  pyproject.toml  setup.cfg
debian/: .gitignore  changelog  control  python3-microfuse.install  rules  watch
doc/: file_system.rst  messages.rst  usage.rst
embedded/: msgpack.py  sched.py  ufuse.py
embedded/ufuse/: __init__.py
examples/: boot.py  upin.py
microfuse/: fuse.py  link.py  multiplex.py  term.py
scripts/: command.py  mpy-cmd  mpy-link  mpy-term  run_test.py
test/: client_unix.py  cons_test.py
