[build-system]
requires = [
  "setuptools >= 42",
  "setuptools_scm[toml] >= 3.5.0",
  "setuptools_scm_git_archive >= 1.1",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
# known_first_party = "foo"

[tool.setuptools_scm]
local_scheme = "no-local-version"
