[metadata]
name = microfuse
url = https://github.com/M-o-a-T/microfuse
project_urls =
    Bug Tracker = https://github.com/M-o-a-T/microfuse/issues
    # Release Management = https://github.com/M-o-a-T/microfuse/releases
    Source Code = https://github.com/M-o-a-T/microfuse
description = A FUSE plus MQTT plus REPL channelfor MicroPython
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

#history =  file: CHANGES
author = Matthias Urlichs
author_email = matthias@urlichs.de
maintainer = Matthias Urlichs
maintainer_email = <matthias@urlichs.de>
license = GPL v3
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: System Administrators

    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

    Operating System :: OS Independent

    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: MicroPython

    Topic :: Utilities

[options]
use_scm_version = True
python_requires = >=3.7
package_dir =
  = .
packages =
    microfuse
    microfuse.util
include_package_data = True
zip_safe = True
install_requires =
    setuptools>=39.0
scripts =
    scripts/mpy-cmd
    scripts/mpy-link
    scripts/mpy-term

[options.package_data]
* = embedded
# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

[flake8]
show-source = True
max-line-length = 99
ignore = W503,F405,E203,E402
exclude = .eggs,.git,dist,.cache,__pycache__
